// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationCardList/ViolationCardListSortControls BoroughAscending smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list-sort-controls">
                  <div class="violation-card-list-sort-control date "
                       data-testid="violation-card-list-sort-control-date"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Date
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control kind "
                       data-testid="violation-card-list-sort-control-kind"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Type
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control location active"
                       data-testid="violation-card-list-sort-control-location"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Borough
                    </span>
                    <svg aria-labelledby="svg-inline--fa-title-angle-up"
                         data-prefix="fas"
                         data-icon="angle-up"
                         class="svg-inline--fa fa-angle-up "
                         role="img"
                         xmlns="http://www.w3.org/2000/svg"
                         viewbox="0 0 448 512"
                    >
                      <title id="svg-inline--fa-title-angle-up">
                        angle-up icon
                      </title>
                      <path fill="currentColor"
                            d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                      >
                      </path>
                    </svg>
                  </div>
                  <div class="violation-card-list-sort-control fined "
                       data-testid="violation-card-list-sort-control-fined"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Fines
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationCardList/ViolationCardListSortControls BoroughDescending smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list-sort-controls">
                  <div class="violation-card-list-sort-control date "
                       data-testid="violation-card-list-sort-control-date"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Date
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control kind "
                       data-testid="violation-card-list-sort-control-kind"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Type
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control location active"
                       data-testid="violation-card-list-sort-control-location"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Borough
                    </span>
                    <svg aria-labelledby="svg-inline--fa-title-angle-down"
                         data-prefix="fas"
                         data-icon="angle-down"
                         class="svg-inline--fa fa-angle-down "
                         role="img"
                         xmlns="http://www.w3.org/2000/svg"
                         viewbox="0 0 448 512"
                    >
                      <title id="svg-inline--fa-title-angle-down">
                        angle-down icon
                      </title>
                      <path fill="currentColor"
                            d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                      >
                      </path>
                    </svg>
                  </div>
                  <div class="violation-card-list-sort-control fined "
                       data-testid="violation-card-list-sort-control-fined"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Fines
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationCardList/ViolationCardListSortControls DateAscending smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list-sort-controls">
                  <div class="violation-card-list-sort-control date active"
                       data-testid="violation-card-list-sort-control-date"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Date
                    </span>
                    <svg aria-labelledby="svg-inline--fa-title-angle-up"
                         data-prefix="fas"
                         data-icon="angle-up"
                         class="svg-inline--fa fa-angle-up "
                         role="img"
                         xmlns="http://www.w3.org/2000/svg"
                         viewbox="0 0 448 512"
                    >
                      <title id="svg-inline--fa-title-angle-up">
                        angle-up icon
                      </title>
                      <path fill="currentColor"
                            d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                      >
                      </path>
                    </svg>
                  </div>
                  <div class="violation-card-list-sort-control kind "
                       data-testid="violation-card-list-sort-control-kind"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Type
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control location "
                       data-testid="violation-card-list-sort-control-location"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Borough
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control fined "
                       data-testid="violation-card-list-sort-control-fined"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Fines
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationCardList/ViolationCardListSortControls DateDescending smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list-sort-controls">
                  <div class="violation-card-list-sort-control date active"
                       data-testid="violation-card-list-sort-control-date"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Date
                    </span>
                    <svg aria-labelledby="svg-inline--fa-title-angle-down"
                         data-prefix="fas"
                         data-icon="angle-down"
                         class="svg-inline--fa fa-angle-down "
                         role="img"
                         xmlns="http://www.w3.org/2000/svg"
                         viewbox="0 0 448 512"
                    >
                      <title id="svg-inline--fa-title-angle-down">
                        angle-down icon
                      </title>
                      <path fill="currentColor"
                            d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                      >
                      </path>
                    </svg>
                  </div>
                  <div class="violation-card-list-sort-control kind "
                       data-testid="violation-card-list-sort-control-kind"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Type
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control location "
                       data-testid="violation-card-list-sort-control-location"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Borough
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control fined "
                       data-testid="violation-card-list-sort-control-fined"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Fines
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationCardList/ViolationCardListSortControls FinesAscending smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list-sort-controls">
                  <div class="violation-card-list-sort-control date "
                       data-testid="violation-card-list-sort-control-date"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Date
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control kind "
                       data-testid="violation-card-list-sort-control-kind"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Type
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control location "
                       data-testid="violation-card-list-sort-control-location"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Borough
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control fined active"
                       data-testid="violation-card-list-sort-control-fined"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Fines
                    </span>
                    <svg aria-labelledby="svg-inline--fa-title-angle-up"
                         data-prefix="fas"
                         data-icon="angle-up"
                         class="svg-inline--fa fa-angle-up "
                         role="img"
                         xmlns="http://www.w3.org/2000/svg"
                         viewbox="0 0 448 512"
                    >
                      <title id="svg-inline--fa-title-angle-up">
                        angle-up icon
                      </title>
                      <path fill="currentColor"
                            d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                      >
                      </path>
                    </svg>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationCardList/ViolationCardListSortControls FinesDescending smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list-sort-controls">
                  <div class="violation-card-list-sort-control date "
                       data-testid="violation-card-list-sort-control-date"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Date
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control kind "
                       data-testid="violation-card-list-sort-control-kind"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Type
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control location "
                       data-testid="violation-card-list-sort-control-location"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Borough
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control fined active"
                       data-testid="violation-card-list-sort-control-fined"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Fines
                    </span>
                    <svg aria-labelledby="svg-inline--fa-title-angle-down"
                         data-prefix="fas"
                         data-icon="angle-down"
                         class="svg-inline--fa fa-angle-down "
                         role="img"
                         xmlns="http://www.w3.org/2000/svg"
                         viewbox="0 0 448 512"
                    >
                      <title id="svg-inline--fa-title-angle-down">
                        angle-down icon
                      </title>
                      <path fill="currentColor"
                            d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                      >
                      </path>
                    </svg>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationCardList/ViolationCardListSortControls TypeAscending smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list-sort-controls">
                  <div class="violation-card-list-sort-control date "
                       data-testid="violation-card-list-sort-control-date"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Date
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control kind active"
                       data-testid="violation-card-list-sort-control-kind"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Type
                    </span>
                    <svg aria-labelledby="svg-inline--fa-title-angle-up"
                         data-prefix="fas"
                         data-icon="angle-up"
                         class="svg-inline--fa fa-angle-up "
                         role="img"
                         xmlns="http://www.w3.org/2000/svg"
                         viewbox="0 0 448 512"
                    >
                      <title id="svg-inline--fa-title-angle-up">
                        angle-up icon
                      </title>
                      <path fill="currentColor"
                            d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                      >
                      </path>
                    </svg>
                  </div>
                  <div class="violation-card-list-sort-control location "
                       data-testid="violation-card-list-sort-control-location"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Borough
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control fined "
                       data-testid="violation-card-list-sort-control-fined"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Fines
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationCardList/ViolationCardListSortControls TypeDescending smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list-sort-controls">
                  <div class="violation-card-list-sort-control date "
                       data-testid="violation-card-list-sort-control-date"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Date
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control kind active"
                       data-testid="violation-card-list-sort-control-kind"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Type
                    </span>
                    <svg aria-labelledby="svg-inline--fa-title-angle-down"
                         data-prefix="fas"
                         data-icon="angle-down"
                         class="svg-inline--fa fa-angle-down "
                         role="img"
                         xmlns="http://www.w3.org/2000/svg"
                         viewbox="0 0 448 512"
                    >
                      <title id="svg-inline--fa-title-angle-down">
                        angle-down icon
                      </title>
                      <path fill="currentColor"
                            d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                      >
                      </path>
                    </svg>
                  </div>
                  <div class="violation-card-list-sort-control location "
                       data-testid="violation-card-list-sort-control-location"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Borough
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                  <div class="violation-card-list-sort-control fined "
                       data-testid="violation-card-list-sort-control-fined"
                  >
                    <span class="violation-card-list-sort-control-name">
                      Fines
                    </span>
                    <span class="arrow-placeholder">
                    </span>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
